test-suite/tests/roundtrip/invalid/syntax/missing_token/04/via-conjure.expected-error.txt
Error running `conjure pretty`: Error: tests/roundtrip/invalid/syntax/missing_token/04/input.essence:2:1:
  |
2 | <empty line>
  | ^
Missing Expression

